@@ -3,34 +3,48 @@ package net.mineacle.core.bootstrap;
 import net.mineacle.core.Core;
 
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Set;
 import java.util.logging.Level;
 
 public final class ModuleManager {
 
     private final Core core;
-    private final List<Module> modules = new ArrayList<>();
-    private final Map<String, Module> modulesByName = new LinkedHashMap<>();
+    private final List<Registration> registrations =
+            new ArrayList<>();
+    private final Map<String, Registration> byName =
+            new LinkedHashMap<>();
+    private final Set<Class<?>> registeredClasses =
+            new HashSet<>();
+
     private boolean shuttingDown;
 
     public ModuleManager(Core core) {
-        this.core = Objects.requireNonNull(core, "core");
+        this.core = Objects.requireNonNull(
+                core,
+                "core"
+        );
     }
 
     /**
      * Enables and records one module.
-     *
-     * A failed module is given one cleanup attempt before the exception is
-     * propagated to Core. Previously enabled modules remain available for the
-     * caller to roll back through {@link #disableAll()}.
+     * <p>
+     * The display name is resolved once at registration and retained for the
+     * complete lifecycle. A failed module gets one cleanup attempt before the
+     * original exception is propagated to Core for full startup rollback.
      */
-    public synchronized void register(Module module) throws Exception {
-        Objects.requireNonNull(module, "module");
+    public synchronized void register(
+            Module module
+    ) throws Exception {
+        Objects.requireNonNull(
+                module,
+                "module"
+        );
 
         if (shuttingDown) {
             throw new IllegalStateException(
@@ -38,22 +52,28 @@ public final class ModuleManager {
             );
         }
 
-        String displayName = validatedName(module);
-        String key = displayName.toLowerCase(Locale.ROOT);
+        String displayName =
+                validatedName(module);
+        String key =
+                displayName.toLowerCase(
+                        Locale.ROOT
+                );
 
-        if (modulesByName.containsKey(key)) {
+        if (byName.containsKey(key)) {
             throw new IllegalStateException(
-                    "Duplicate MineacleCore module name: " + displayName
+                    "Duplicate MineacleCore module name: "
+                            + displayName
             );
         }
 
-        for (Module registered : modules) {
-            if (registered.getClass().equals(module.getClass())) {
-                throw new IllegalStateException(
-                        "Duplicate MineacleCore module class: "
-                                + module.getClass().getName()
-                );
-            }
+        if (registeredClasses.contains(
+                module.getClass()
+        )) {
+            throw new IllegalStateException(
+                    "Duplicate MineacleCore module class: "
+                            + module.getClass()
+                            .getName()
+            );
         }
 
         long startedAt = System.nanoTime();
@@ -64,29 +84,42 @@ public final class ModuleManager {
             try {
                 module.disable();
             } catch (Exception cleanupFailure) {
-                enableFailure.addSuppressed(cleanupFailure);
+                enableFailure.addSuppressed(
+                        cleanupFailure
+                );
             }
 
             throw enableFailure;
         }
 
-        modules.add(module);
-        modulesByName.put(key, module);
+        Registration registration =
+                new Registration(
+                        module,
+                        displayName
+                );
+
+        registrations.add(registration);
+        byName.put(key, registration);
+        registeredClasses.add(
+                module.getClass()
+        );
 
         core.getLogger().info(
                 "Initialized module: "
                         + displayName
                         + " ("
-                        + elapsedMillis(startedAt)
+                        + elapsedMillis(
+                        startedAt
+                )
                         + "ms)"
         );
     }
 
     /**
-     * Disables registered modules in reverse dependency order.
-     *
-     * The method is idempotent, so it is safe for both startup rollback and
-     * Bukkit's normal onDisable lifecycle.
+     * Disables registered modules in exact reverse initialization order.
+     * <p>
+     * The method is idempotent so startup rollback and Bukkit's normal plugin
+     * shutdown can safely converge on the same lifecycle path.
      */
     public synchronized void disableAll() {
         if (shuttingDown) {
@@ -95,55 +128,99 @@ public final class ModuleManager {
 
         shuttingDown = true;
 
-        for (int index = modules.size() - 1; index >= 0; index--) {
-            Module module = modules.get(index);
-            String displayName = safeName(module);
-            long startedAt = System.nanoTime();
+        for (int index =
+             registrations.size() - 1;
+             index >= 0;
+             index--) {
+            Registration registration =
+                    registrations.get(index);
+
+            long startedAt =
+                    System.nanoTime();
 
             try {
-                module.disable();
+                registration
+                        .module()
+                        .disable();
+
                 core.getLogger().info(
                         "Disabled module: "
-                                + displayName
+                                + registration
+                                .displayName()
                                 + " ("
-                                + elapsedMillis(startedAt)
+                                + elapsedMillis(
+                                startedAt
+                        )
                                 + "ms)"
                 );
             } catch (Exception exception) {
                 core.getLogger().log(
                         Level.WARNING,
-                        "Failed to disable module " + displayName,
+                        "Failed to disable module "
+                                + registration
+                                .displayName(),
                         exception
                 );
             }
         }
 
-        modules.clear();
-        modulesByName.clear();
+        registrations.clear();
+        byName.clear();
+        registeredClasses.clear();
     }
 
     public synchronized List<Module> modules() {
-        return Collections.unmodifiableList(new ArrayList<>(modules));
+        List<Module> result =
+                new ArrayList<>(
+                        registrations.size()
+                );
+
+        for (Registration registration
+                : registrations) {
+            result.add(
+                    registration.module()
+            );
+        }
+
+        return List.copyOf(result);
     }
 
-    public synchronized Module module(String name) {
-        if (name == null || name.isBlank()) {
+    public synchronized Module module(
+            String name
+    ) {
+        if (name == null
+                || name.isBlank()) {
             return null;
         }
 
-        return modulesByName.get(name.trim().toLowerCase(Locale.ROOT));
+        Registration registration =
+                byName.get(
+                        name.trim()
+                                .toLowerCase(
+                                        Locale.ROOT
+                                )
+                );
+
+        return registration == null
+                ? null
+                : registration.module();
     }
 
     public synchronized int size() {
-        return modules.size();
+        return registrations.size();
     }
 
-    private String validatedName(Module module) {
+    private String validatedName(
+            Module module
+    ) {
         String name = module.name();
 
-        if (name == null || name.isBlank()) {
+        if (name == null
+                || name.isBlank()) {
             throw new IllegalArgumentException(
-                    "Module " + module.getClass().getName()
+                    "Module "
+                            + module.getClass()
+                            .getName()
                             + " returned an empty name"
             );
         }
@@ -151,18 +228,20 @@ public final class ModuleManager {
         return name.trim();
     }
 
-    private String safeName(Module module) {
-        try {
-            return validatedName(module);
-        } catch (RuntimeException ignored) {
-            return module.getClass().getSimpleName();
-        }
-    }
-
-    private long elapsedMillis(long startedAt) {
+    private long elapsedMillis(
+            long startedAt
+    ) {
         return Math.max(
                 0L,
-                (System.nanoTime() - startedAt) / 1_000_000L
+                (System.nanoTime()
+                        - startedAt)
+                        / 1_000_000L
         );
+    }
+
+    private record Registration(
+            Module module,
+            String displayName
+    ) {
     }
 }
